<resources>
    <string name="app_name">WinterHills</string>
    <string name="title_activity_in">ActivityIN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="desc">Image</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="entry">Visitors Entry Form</string>

    <string name="block">Block</string>
    <string name="tower">Tower</string>
    <string name="unit">Unit</string>
</resources>
