<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="130dp"
                android:contentDescription="@string/desc"
                android:src="@color/colorPrimary" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textlayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="290dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/design_button"
                    android:gravity="center"
                    android:hint="@string/username">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textlayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textlayout1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/design_button"
                    android:gravity="center"
                    android:hint="@string/password">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/forgetpassword"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/textlayout2"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/password"
                android:textSize="20sp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgetpassword"
                android:layout_marginStart="140dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/design_button"
                android:text="@string/login"
                android:textAllCaps="false" />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>
